objects/Contact_Team__c.object
<CustomObject>
    <fields>
        <fullName>CC_Call_Recording_Permission_Taken_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Call Recording Permission Taken by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Team1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Call_Recording_Permission_Taken_on__c</fullName>
        <label>CC Call Recording Permission Taken on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Note__c</fullName>
        <label>CS Note</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Team</relationshipLabel>
        <relationshipName>Contact_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <label>Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM (Biz Dev)</fullName>
                </value>
                <value>
                    <fullName>AM (CrowdCompass)</fullName>
                </value>
                <value>
                    <fullName>AM (CrowdTorch)</fullName>
                </value>
                <value>
                    <fullName>AM (CSN)</fullName>
                </value>
                <value>
                    <fullName>AM (Event)</fullName>
                </value>
                <value>
                    <fullName>AM (SMM)</fullName>
                </value>
                <value>
                    <fullName>AM (Survey)</fullName>
                </value>
                <value>
                    <fullName>AM (TPP)</fullName>
                </value>
                <value>
                    <fullName>AM Pre Sales (CSN)</fullName>
                </value>
                <value>
                    <fullName>CC Deal Assisted By</fullName>
                </value>
                <value>
                    <fullName>Cross Sell Referral By</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Referred By</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch Referred By</fullName>
                </value>
                <value>
                    <fullName>CS (CSN)</fullName>
                </value>
                <value>
                    <fullName>CS (Event)</fullName>
                </value>
                <value>
                    <fullName>CS (Survey)</fullName>
                </value>
                <value>
                    <fullName>CSN Product Referred By</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (Biz Dev)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CrowdCompass)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CrowdTorch)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CSN)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CSN CVB)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (CSN SAT)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (Event)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (SMM)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (Survey)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (Ticket Mob)</fullName>
                </value>
                <value>
                    <fullName>Direct Sales (TPP)</fullName>
                </value>
                <value>
                    <fullName>Event Referred By</fullName>
                </value>
                <value>
                    <fullName>PA Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile App</label>
        <referenceTo>Mobile_Card__c</referenceTo>
        <relationshipLabel>Contact Team</relationshipLabel>
        <relationshipName>Contact_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the rep</inlineHelpText>
        <label>Team Member Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Contact Team</label>
    <nameField>
        <displayFormat>CT-{00}</displayFormat>
        <label>Contact Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>